# Find_pazl

./: Cargo.toml  README.md
src/: color.rs  data.rs  ice_library.rs  main.rs
