[package]
name = "Find_pazl"
version = "3.0.6"
edition = "2021"

build = "build.rs"

[dependencies]
rand = "0.8.5"
base58 = "0.2.0"
hex ="0.4.3"

num_cpus = "1.13.0"
tokio = { version = "1.20.1", features = ["full"] }

#цветной вывод в консоль
console = "0.15.7"

rustils="0.1.23"

sha2="0.10.8"
ripemd="0.1.3"
libloading = "0.8.1"
libc = { version = "0.2.149", features = [] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
