[package]
name = "Find_pazl"
version = "4.0.1"
edition = "2021"

build = "build.rs"

[dependencies]
rand = "0.8.5"
base58 = "0.2.0"
hex ="0.4.3"

num_cpus = "1.13.0"
tokio = { version = "1.20.1", features = ["full"] }

#цветной вывод в консоль
console = "0.15.7"

rustils="0.1.23"

sha2="0.10.8"
ripemd="0.1.3"

#ice_secp256k1 либа для винды
[target.'cfg(windows)'.dependencies]
libloading = "0.8.1"
lazy_static = "1.4.0"
once_cell = "1.19.0"

rust_secp256k1 = { version = "0.29.0", package = "secp256k1" }
sv = "0.2.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3 #z Минимизирует размер кода, для максимальной производительности можно использовать "3"
